[tool.poetry]
name = "repl_python3_online-attendance"
version = "0.1.0"
description = ""
authors = ["flaviusgorgonio <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PyPDF2 = "^1.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
